[package]
name = "trust-distribution-system"
version = "0.2.0"
edition = "2024"
default-run = "server"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
axum-server = "0.8"
clap = { version = "4", features = ["cargo", "derive"] }
env_logger = "0.11"
log = { version = "0.4", features = [
    "release_max_level_debug",
    "max_level_trace",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
encryption = { path = "lib/encryption" }
pub-impl = { path = "lib/pub-impl" }

# Additional dependencies for server/client
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
dashmap = "6"
totp-rs = { version = "5", features = ["serde_support"] }
argon2 = "0.5"
data-encoding = "2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
rand = "0.8"
walkdir = "2"
kstool = { version = "0.3", features = ["jiff"] }

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "client/main.rs"
