[package]
name = "trust-distribution-system"
version = "0.2.0"
edition = "2024"
default-run = "server"

[dependencies]
anyhow = "1"
argon2 = "0.5"
axum = { version = "0.8", features = ["json"] }
axum-server = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["cargo", "derive"] }
dashmap = "6"
data-encoding = "2"
encryption = { path = "lib/encryption" }
env_logger = "0.11"
hex = "0.4"
kstool = { version = "0.3", features = ["jiff"] }
log = { version = "0.4", features = [
    "release_max_level_debug",
    "max_level_trace",
] }
pub-impl = { path = "lib/pub-impl" }
rand = "0.8"
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
toml = "1"
totp-rs = { version = "5", features = ["serde_support"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
walkdir = "2"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "client/main.rs"
